--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,8 +1,14 @@
 .container {
-  max-width: 1170px;
+  max-width: 480px;
   width: 100%;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
-
+  
+  @media (min-width: 768px) {
+    max-width: 768px;
+  }
+  @media (min-width: 1200px) {
+    max-width: 1200px;
+  }
 }
