--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -2,8 +2,12 @@
 
   &__filter-list {
     display: flex;
-    justify-content: center;
     margin-bottom: 50px;
+
+    @media (min-width: 768px) {
+      
+    justify-content: center;
+    }
 
     @media (max-width: 1200px) {
       flex-wrap: wrap;
